log
Wed 13 Sep 2023 11:27:35 PM UTC: 
 tests:  1|8
total_score: 0/70
1c57b1c
Wed 13 Sep 2023 11:33:07 PM UTC: 
 treemap.c | 5 ++++-
 1 file changed, 4 insertions(+), 1 deletion(-)
In file included from test.c:4:
treemap.c: In function ‘createTreeMap’:
treemap.c:40:33: error: implicit declaration of function ‘sizeoff’ [-Werror=implicit-function-declaration]
   40 |   TreeMap* map=(TreeMap*)malloc(sizeoff(TreeMap));
      |                                 ^~~~~~~
treemap.c:40:41: error: expected expression before ‘TreeMap’
   40 |   TreeMap* map=(TreeMap*)malloc(sizeoff(TreeMap));
      |                                         ^~~~~~~
treemap.c:42:19: error: ‘lt’ undeclared (first use in this function)
   42 |   map->lower_than=lt;
      |                   ^~
treemap.c:42:19: note: each undeclared identifier is reported only once for each function it appears in
cc1: all warnings being treated as errors
Compilation failed
00cd09f
Wed 13 Sep 2023 11:33:29 PM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:
treemap.c: In function ‘createTreeMap’:
treemap.c:42:19: error: ‘lt’ undeclared (first use in this function)
   42 |   map->lower_than=lt;
      |                   ^~
treemap.c:42:19: note: each undeclared identifier is reported only once for each function it appears in
Compilation failed
dff64ee
Wed 13 Sep 2023 11:34:14 PM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  4|7
total_score: 5/70
fa25f48
Wed 13 Sep 2023 11:52:04 PM UTC: 
 treemap.c | 18 ++++++++++++++++++
 1 file changed, 18 insertions(+)
In file included from test.c:4:
treemap.c: In function ‘searchTreeMap’:
treemap.c:78:42: error: ‘TreeNode’ has no member named ‘key’
   78 |     int cmp=tree->lower_than(key, current->key);
      |                                          ^~
treemap.c:84:26: error: ‘TreeNode’ has no member named ‘key’
   84 |       result->key=current->key;
      |                          ^~
treemap.c:85:28: error: ‘TreeNode’ has no member named ‘value’
   85 |       result->value=current->value;
      |                            ^~
Compilation failed
e2b8e8c
Wed 13 Sep 2023 11:53:50 PM UTC: 
 treemap.c | 4 ++++
 1 file changed, 4 insertions(+)
In file included from test.c:4:
treemap.c: In function ‘searchTreeMap’:
treemap.c:82:42: error: ‘TreeNode’ has no member named ‘key’
   82 |     int cmp=tree->lower_than(key, current->key);
      |                                          ^~
treemap.c:88:26: error: ‘TreeNode’ has no member named ‘key’
   88 |       result->key=current->key;
      |                          ^~
treemap.c:89:28: error: ‘TreeNode’ has no member named ‘value’
   89 |       result->value=current->value;
      |                            ^~
Compilation failed
b561029
Wed 13 Sep 2023 11:54:26 PM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:
treemap.c: In function ‘searchTreeMap’:
treemap.c:81:42: error: ‘TreeNode’ has no member named ‘key’
   81 |     int cmp=tree->lower_than(key, current->key);
      |                                          ^~
treemap.c:87:26: error: ‘TreeNode’ has no member named ‘key’
   87 |       result->key=current->key;
      |                          ^~
treemap.c:88:28: error: ‘TreeNode’ has no member named ‘value’
   88 |       result->value=current->value;
      |                            ^~
treemap.c:97:10: error: ‘result’ undeclared (first use in this function)
   97 |   return result;
      |          ^~~~~~
treemap.c:97:10: note: each undeclared identifier is reported only once for each function it appears in
treemap.c:98:1: error: control reaches end of non-void function [-Werror=return-type]
   98 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
b1adfe0
Wed 13 Sep 2023 11:54:39 PM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:
treemap.c: In function ‘searchTreeMap’:
treemap.c:81:42: error: ‘TreeNode’ has no member named ‘key’
   81 |     int cmp=tree->lower_than(key, current->key);
      |                                          ^~
treemap.c:87:26: error: ‘TreeNode’ has no member named ‘key’
   87 |       result->key=current->key;
      |                          ^~
treemap.c:88:28: error: ‘TreeNode’ has no member named ‘value’
   88 |       result->value=current->value;
      |                            ^~
treemap.c:97:10: error: ‘result’ undeclared (first use in this function)
   97 |   return result->key;
      |          ^~~~~~
treemap.c:97:10: note: each undeclared identifier is reported only once for each function it appears in
treemap.c:98:1: error: control reaches end of non-void function [-Werror=return-type]
   98 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
0fb08df
Wed 13 Sep 2023 11:55:04 PM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:
treemap.c: In function ‘searchTreeMap’:
treemap.c:81:42: error: ‘TreeNode’ has no member named ‘key’
   81 |     int cmp=tree->lower_than(key, current->key);
      |                                          ^~
treemap.c:87:26: error: ‘TreeNode’ has no member named ‘key’
   87 |       result->key=current->key;
      |                          ^~
treemap.c:88:28: error: ‘TreeNode’ has no member named ‘value’
   88 |       result->value=current->value;
      |                            ^~
Compilation failed
b6fed52
Thu 14 Sep 2023 12:02:25 AM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:
treemap.c: In function ‘searchTreeMap’:
treemap.c:81:42: error: ‘TreeNode’ has no member named ‘key’
   81 |     int cmp=tree->lower_than(key, current->key);
      |                                          ^~
treemap.c:87:26: error: ‘TreeNode’ has no member named ‘key’
   87 |       result->key=current->key;
      |                          ^~
treemap.c:88:28: error: ‘TreeNode’ has no member named ‘value’
   88 |       result->value=current->value;
      |                            ^~
treemap.c:97:10: error: ‘result’ undeclared (first use in this function)
   97 |   return result->value;
      |          ^~~~~~
treemap.c:97:10: note: each undeclared identifier is reported only once for each function it appears in
treemap.c:98:1: error: control reaches end of non-void function [-Werror=return-type]
   98 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
5cefca7
